# amazing-wasm

./: .gitignore  Cargo.toml  aptos-sign.md  build.sh  index.html  manifest_v2.json  manifest_v3.json
.cargo/: config.toml
embed/: WasmData
js/: content_script.js  run_wasm.js
src/: aptos.rs  aptos_test.rs  lib.rs  util.rs  wasm_data.rs
