[package]
name = "amazing-wasm"
version = "0.1.0"
authors = ["egal <egal@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1.6"

obfstr = "0.4.4"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

#aptos
move-core-types = { git = "https://github.com/move-language/move", rev = "ea70797099baea64f05194a918cebd69ed02b285", features = ["address32"] }
tw_aptos = { git = "https://github.com/trustwallet/wallet-core.git", tag = "4.1.14" }
tw_proto = { git = "https://github.com/trustwallet/wallet-core.git", tag = "4.1.14" }
tw_encoding = { git = "https://github.com/trustwallet/wallet-core.git", tag = "4.1.14" }
tw_coin_entry = { git = "https://github.com/trustwallet/wallet-core.git", tag = "4.1.14" }


[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Document", "Location", ]



# build release opt
[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1