[package]
name = "amazing-wasm"
version = "0.1.0"
authors = ["egal <egal@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1.6"

obfstr = "0.4.4"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

#aptos
sha3 = "0.10.8"
ed25519-dalek = "1.0"
bcs = "0.1.6"
#move-core-types = { git = "https://github.com/move-language/move", rev = "ea70797099baea64f05194a918cebd69ed02b285", features = ["address32"] }


[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Document", "Location", ]



# build release opt
[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1